typescript/checker/tests/conformance/externalModules/es6/es6modulekindWithES5Target9.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            39,
        ),
        hi: BytePos(
            59,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/externalModules/es6",
    src: Atom('mod' type=inline),
}
 --> $DIR/tests/conformance/externalModules/es6/es6modulekindWithES5Target9.ts:4:1
  |
4 | import d from "mod";
  | ^^^^^^^^^^^^^^^^^^^^

error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            63,
        ),
        hi: BytePos(
            85,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/externalModules/es6",
    src: Atom('mod' type=inline),
}
 --> $DIR/tests/conformance/externalModules/es6/es6modulekindWithES5Target9.ts:6:1
  |
6 | import {a} from "mod";
  | ^^^^^^^^^^^^^^^^^^^^^^

